turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:10: error: type mismatch;
 found   : Unit
 required: Int
for (i <- 0 to colors.length-1){
       ^